[project]
name = "hnh"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "jinja2>=3.1.4",
    "transformers>=4.45.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "python-multipart>=0.0.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
